--- a/www/index.html
+++ b/www/index.html
@@ -1,44 +1,47 @@
-<!DOCTYPE html><!--HTML5 doctype-->
+<!DOCTYPE html>
 <html>
-    <head>
-        <script>
-            (function() {
-                if ("-ms-user-select" in document.documentElement.style && navigator.userAgent.match(/IEMobile\/10\.0/)) 
-                {
-                    var msViewportStyle = document.createElement("style");
-                    msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));
-                    document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
-                }
-            })();
-        </script>
-        <title>Demo-Camera API</title>
-        <meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <link href="css/fonts.css" rel="stylesheet" type="text/css" charset="utf-8" />
-        <link href="css/main.css" rel="stylesheet" type="text/css">
-        <script src='cordova.js'></script> 
-        <script src="js/main.js" type="text/javascript"></script>
-    </head>
-    
-    <body>
-        <div class="masthead">
-            <img class="logo" src="images/logo.png"/>
-        </div>
-        <div class="content" id="contentid">
-            <div>
-                <div id="imagecontent" class="hide">
-                    <div id="imagespace">
-                        <img id="slideshowpicid" class="slideshowpic"/>
-                    </div>
-                    <img src="images/Arrow-L.png" class="arrows" id="previousid" onclick="Previous()"></img>
-                    <img src="images/Arrow-R.png" class="arrows" id="nextid" onclick="Next()"></img>
-                    <img src="images/EndShow.png" class="endbutton" onclick="endslideshow()"></img>
+<!-- Please see the included README.md and LICENSE.md files for license terms and conditions. -->
+
+<head>
+    <title>Demo-Camera API</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <script>
+    (function() {
+        if ("-ms-user-select" in document.documentElement.style && navigator.userAgent.match(/IEMobile\/10\.0/)) {
+            var msViewportStyle = document.createElement("style");
+            msViewportStyle.appendChild(document.createTextNode("@-ms-viewport{width:auto!important}"));
+            document.getElementsByTagName("head")[0].appendChild(msViewportStyle);
+        }
+    })();
+    </script>
+
+    <link href="css/fonts.css" rel="stylesheet" type="text/css" charset="utf-8" />
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src='cordova.js'></script>
+    <script src="js/main.js"></script>
+</head>
+
+<body>
+    <div class="masthead">
+        <img class="logo" src="images/logo.png" />
+    </div>
+    <div class="content" id="contentid">
+        <div>
+            <div id="imagecontent" class="hide">
+                <div id="imagespace">
+                    <img id="slideshowpicid" class="slideshowpic" />
                 </div>
-                <img src="images/EmptyBox-Phone.png" id="photoone" />
-                <img src="images/EmptyBox-Phone.png" id="phototwo" />
-                <img src="images/EmptyBox-Phone.png" id="photothree" />
+                <img src="images/Arrow-L.png" class="arrows" id="previousid" onclick="Previous()"></img>
+                <img src="images/Arrow-R.png" class="arrows" id="nextid" onclick="Next()"></img>
+                <img src="images/EndShow.png" class="endbutton" onclick="endslideshow()"></img>
             </div>
-            <div class="button" id="buttonid" onclick="takepicture()">Take Picture</div>
+            <img src="images/EmptyBox-Phone.png" id="photoone" />
+            <img src="images/EmptyBox-Phone.png" id="phototwo" />
+            <img src="images/EmptyBox-Phone.png" id="photothree" />
         </div>
-    </body>
+        <div class="button" id="buttonid" onclick="takepicture()">Take Picture</div>
+    </div>
+</body>
+
 </html>
